<resources>
    <string name="app_name">SLON-DS Player</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_screen_unlock_dialog">Unlock screen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_disable_sustemui">Disable system UI</string>
    <string name="pref_key_disable_sustemui" translatable="false">disable_systemui</string>
    <string name="pref_description_disable_sustemui">Remove action bar and HW buttons. Requires root access. Reboot to apply</string>

    <string name="pref_title_storage_path">Storage path</string>
    <string name="pref_description_storage_path">Path to be used for files storage</string>
    <string name="pref_key_storage_path" translatable="false">storage_path</string>

    <string name="pref_description_autostart">Start automatically on boot</string>
    <string name="pref_title_autostart">Autostart on boot</string>
    <string name="pref_key_autostart" translatable="false">autostart</string>

    <string name="pref_key_launch_system_settings" translatable="false">launch_system_settings</string>
    <string name="pref_title_open_system_settings">Open system settings</string>

    <string name="pref_title_version">Application version</string>
    <string name="pref_key_version" translatable="false">app_version</string>

    <string name="pref_title_brightness">Brightness</string>
    <string name="pref_description_brightness">Screen brightness when displaying video/images</string>
    <string name="pref_key_brightness" translatable="false">brightness</string>
    <string name="pref_default_brightness" translatable="false">100</string>

    <string name="pref_title_screen_unlock_pin">Screen unlock pin</string>
    <string name="pref_description_screen_unlock_pin">Enter settings screen by entering this code</string>
    <string name="pref_key_screen_unlock_pin" translatable="false">screen_unlock_pin</string>
    <string name="pref_default_screen_unlock_pin" translatable="false">10101</string>


    <!-- Settings for Network -->
    <string name="pref_header_network">Network</string>

    <string name="pref_default_server_uri" translatable="false">https://server.slon-ds.ru</string>
    <string name="pref_title_server_uri">Server URI</string>
    <string name="pref_key_server_uri" translatable="false">server_uri</string>

    <string name="pref_default_login" translatable="false"></string>
    <string name="pref_title_login">Device login</string>
    <string name="pref_key_login" translatable="false">login</string>

    <string name="pref_default_password" translatable="false"></string>
    <string name="pref_title_password">Device password</string>
    <string name="pref_key_password" translatable="false">password</string>


    <string name="pref_header_logging">Logging</string>

    <string name="pref_description_verbose_logging">Verbose logging</string>
    <string name="pref_title_verbose_logging">Verbose log file. Do not enable unless you are absolutely sure you need this</string>
    <string name="pref_key_verbose_logging" translatable="false">verbose_logging</string>

</resources>
