<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:summary="@string/pref_description_autostart"
        android:key="@string/pref_key_autostart"
        android:title="@string/pref_title_autostart" />

    <EditTextPreference
        android:title="@string/pref_title_storage_path"
        android:summary="@string/pref_description_storage_path"
        android:key="@string/pref_key_storage_path" />

    <SwitchPreference
        android:defaultValue="false"
        android:summary="@string/pref_description_disable_sustemui"
        android:key="@string/pref_key_disable_sustemui"
        android:title="@string/pref_title_disable_sustemui" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_brightness"
        android:summary="@string/pref_description_brightness"
        android:key="@string/pref_key_brightness"
        android:title="@string/pref_title_brightness"
        android:inputType="numberDecimal" />

    <Preference
        android:title="@string/pref_title_open_system_settings"
        android:persistent="false"
        android:key="@string/pref_key_launch_system_settings"/>

    <Preference
        android:title="@string/pref_title_version"
        android:persistent="false"
        android:key="@string/pref_key_version"/>

</PreferenceScreen>
